@@ -6,7 +6,7 @@ Uploaders: Steffen Moeller <steffen_moeller@gmx.de>, Frank S. Thomas <fst@debian
 Standards-Version: 3.8.0
 Build-Depends: debhelper (>= 7), quilt (>= 0.40), po-debconf, dh-buildinfo,
  docbook2x, docbook-xml, autotools-dev, automake1.9 (>= 1.9.3),
- autoconf (>= 2.59), libxml2-utils, zlib1g-dev, libssl-dev,
+ autoconf (>= 2.59), libxml2-utils, gettext, zlib1g-dev, libssl-dev,
  libcurl4-openssl-dev (>= 7.17.1), freeglut3-dev, libsm-dev, libice-dev,
  libxmu-dev, libxi-dev, libx11-dev, libjpeg62-dev, libwxgtk2.8-dev
 Homepage: http://boinc.berkeley.edu/
